--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    @apply font-sans;
+@layer base {
+  h1, h2, h3, h4, h5, h6 {
+    @apply font-heading;
   }
+  p {
+    @apply font-body text-[16px];
+  }
+}
